fix: 변환 메소드 서비스에 위임 - DTO와 엔티티를 서로 변환하는 메소드를 서비스에 추가 - 몇몇 잘못된 비즈니스 로직 수정
Resolves: #44