@@ -1,10 +1,13 @@
 package com.prgrms2.java.bitta.jobpost.service;
 
+import com.prgrms2.java.bitta.apply.util.ApplyProvider;
 import com.prgrms2.java.bitta.jobpost.dto.JobPostDTO;
 import com.prgrms2.java.bitta.jobpost.entity.JobPost;
 import com.prgrms2.java.bitta.jobpost.exception.JobPostException;
 import com.prgrms2.java.bitta.jobpost.repository.JobPostRepository;
 import com.prgrms2.java.bitta.member.repository.MemberRepository;
+import com.prgrms2.java.bitta.member.util.MemberProvider;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
@@ -14,19 +17,21 @@ import java.util.stream.Collectors;
 
 @Slf4j
 @Service
+@RequiredArgsConstructor
 public class JobPostServiceImpl implements JobPostService {
     private final JobPostRepository jobPostRepository;
-
-    public JobPostServiceImpl(JobPostRepository jobPostRepository, MemberRepository memberRepository) {
-        this.jobPostRepository = jobPostRepository;
-    }
+    private final MemberProvider memberProvider;
+    private final ApplyProvider applyProvider;
 
     @Override
     public List<JobPostDTO> getList() {
         List<JobPost> jobPost = jobPostRepository.findAll();
-        return jobPost.stream()
-                .map(JobPostDTO::new)
-                .collect(Collectors.toList());
+
+        if (jobPost.isEmpty()) {
+            throw JobPostException.NOT_FOUND.get();
+        }
+
+        return jobPost.stream().map(this::entityToDto).toList();
     }
 
 //    @Override
@@ -38,9 +43,9 @@ public class JobPostServiceImpl implements JobPostService {
     @Override
     public JobPostDTO register(JobPostDTO jobPostDTO) {
         try {
-            JobPost jobPost = jobPostDTO.toEntity();
+            JobPost jobPost = dtoToEntity(jobPostDTO);
             jobPost = jobPostRepository.save(jobPost);
-            return new JobPostDTO(jobPost);
+            return entityToDto(jobPost);
         } catch (Exception e) {
             log.error(e.getMessage());
             throw JobPostException.NOT_REGISTERED.get();
@@ -64,8 +69,9 @@ public class JobPostServiceImpl implements JobPostService {
             jobPost.setLocation(jobPostDTO.getLocation());
             jobPost.setPayStatus(jobPostDTO.getPayStatus());
 
-            return new JobPostDTO(jobPost);
+            jobPostRepository.save(jobPost);
 
+            return entityToDto(jobPost);
         } catch (Exception e){
             log.error(e.getMessage());
             throw JobPostException.NOT_MODIFIED.get();
@@ -82,6 +88,37 @@ public class JobPostServiceImpl implements JobPostService {
             log.error(e.getMessage());
             throw JobPostException.NOT_REMOVED.get();
         }
+    }
+
+    private JobPostDTO entityToDto(JobPost jobPost) {
+        return JobPostDTO.builder()
+                .id(jobPost.getId())
+                .title(jobPost.getTitle())
+                .description(jobPost.getDescription())
+                .location(jobPost.getLocation())
+                .payStatus(jobPost.getPayStatus())
+                .isClosed(jobPost.isClosed())
+                .startDate(jobPost.getStartDate())
+                .endDate(jobPost.getEndDate())
+                .updateAt(jobPost.getUpdatedAt())
+                .userId(jobPost.getMember().getMemberId())
+                .build();
+    }
+
+    private JobPost dtoToEntity(JobPostDTO jobPostDTO) {
+        return JobPost.builder()
+                .id(jobPostDTO.getId())
+                .title(jobPostDTO.getTitle())
+                .description(jobPostDTO.getDescription())
+                .location(jobPostDTO.getLocation())
+                .payStatus(jobPostDTO.getPayStatus())
+                .isClosed(jobPostDTO.isClosed())
+                .startDate(jobPostDTO.getStartDate())
+                .endDate(jobPostDTO.getEndDate())
+                .updatedAt(jobPostDTO.getUpdateAt())
+                .member(memberProvider.getById(jobPostDTO.getId()))
+                .apply(applyProvider.getAllByJobPost(jobPostDTO.getId()))
+                .build();
     }
 }
 
